# dev_events_bot

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  webhook.py
.github/scripts/: auto_renew_pythonanywhere.py
.github/workflows/: auto_renew_pythonanywhere.yml  autolink_jira.yml  lint_and_test.yml
app/: config.py  models.py  utils.py
app/handler/: commit_event.py  github_actions_failed_event.py  pull_request_merged_event.py  repo_update.py  review_requested_event.py
app/repository/: git.py  github.py  jira.py  telegram.py
app/service/: commit_event.py  github_actions_failed_event.py  pull_request_merged_event.py  repo_update.py  review_requested_event.py
tests/handler/: test_commit_event.py  test_github_actions_failed_event.py  test_repo_update.py  test_review_requested_event.py
