[tool.poetry]
name = "dev-events-bot"
version = "1.0.0"
package-mode = false
description = ""
authors = ["Andrey Kataev kata3v.andrey@yandex.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.4"
flask = ">=3.1.1,<4.0.0"
requests = ">=2.32.3,<3.0.0"
gitpython = ">=3.1.44,<4.0.0"
jira = ">=3.8.0,<4.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310"]
skip-string-normalization = false
exclude = '''
/(
    \.git
  | \.hg
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["app"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:T20,ARG001"
]
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [".venv"]
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP",
    "SIM",
    "T20",
    "ARG",
    "C4",
    "RUF"
]
ignore = [
    "E203",
    "B008",
    "SIM105",
    "RUF001",
    "RUF100"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "ARG001"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = "."

[tool.pytest_env]
TELEGRAM_BOT_TOKEN = ""
TELEGRAM_CHAT_ID = ""
TELEGRAM_THREAD_ID = ""
GITHUB_REPO_PATH = ""
SERVER_WSGI_PATH = ""

DMYTRO_TG_ID = ""
ANDREY_TG_ID = ""
DANYA_TG_ID = ""
EGOR_TG_ID = ""

DMYTRO_JIRA_ID = ""
ANDREY_JIRA_ID = ""
DANYA_JIRA_ID = ""

JIRA_API_TOKEN = ""
JIRA_BASE_URL = ""
JIRA_LOGIN_EMAIL = ""

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
ruff = "^0.11.11"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.1"
flake8-pyproject = "^1.2.3"
types-requests = "^2.32.0.20250515"
pylint = "^3.3.7"
pytest-env = "^1.1.5"

